--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -1,60 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+	<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+   <title> Java development tools (JDT) </title>
+</head>
+<body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US" style="tab-interval:.5in">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>
- Java development tools (JDT)
-</TITLE>
+<div class=Section1>
+<h1>
+Java development tools (JDT)</h1>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Java development tools (JDT)</H1>
-<p CLASS="Head">
-The Java development tools (JDT) are a set of extensions to the workbench that 
-enable Java development. </p>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p>
-<a href="../concepts/cbrkpnts.htm">Breakpoints</a><br>
-<a href="../concepts/cclsspthv.htm">Class path variables</a><br>
-<a href="../concepts/concepts-10.htm">Debugger</a><br>
-<a href="../concepts/concepts-4.htm">Java builder</a><br>
-<a href="../concepts/concepts-7.htm">Java editor</a><br>
-<a href="../concepts/concepts-3.htm">Java projects</a><br>
-<a href="../concepts/concepts-5.htm">Java perspectives</a><br>
-<a href="../concepts/concepts-6.htm">Java views</a><br>
-<a href="../concepts/concepts-8.htm">Java search</a><br>
-<a href="../concepts/concepts-9.htm">Refactoring support</a><br>
-<a href="../concepts/concepts-11.htm">Scrapbook</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-31.htm">Adding source code 
-as individual files</a><br>
-<a href="../tasks/tasks-11.htm">Creating Java 
-elements</a><br>
-<a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-<a href="../tasks/tasks-64.htm">Restoring a deleted 
-workbench element</a><br>
-<a href="../tasks/tasks-128.htm">Setting the 
-launcher for a project</a><br>
-<a href="../tasks/tasks-2.htm">Showing and hiding 
-files</a><br>
-<a href="../tasks/tasks-119.htm">Working with JREs</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-2.htm">JDT actions</a><br>
-<a href="../reference/ref-152.htm">Frequently asked 
-questions on JDT</a><br>
-<a href="../reference/ref-155.htm">JDT glossary</a> <br>
+<div class="head">The Java development tools (JDT) are a set of extensions
+to the workbench that enable Java development.</div>
 
-&nbsp;</p>
-<p>
+<p><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
+<p><a href="..\concepts\cbrkpnts.htm">Breakpoints</a>
+<br><a href="..\concepts\cclsspthv.htm">Class path variables</a>
+<br><a href="..\concepts\concepts-10.htm">Debugger</a>
+<br><a href="..\concepts\concepts-4.htm">Java builder</a>
+<br><a href="..\concepts\concepts-7.htm">Java editor</a>
+<br><a href="..\concepts\concepts-3.htm">Java projects</a>
+<br><a href="..\concepts\concepts-5.htm">Java perspectives</a>
+<br><a href="..\concepts\concepts-6.htm">Java views</a>
+<br><a href="..\concepts\concepts-8.htm">Java search</a>
+<br><a href="..\concepts\concepts-9.htm">Refactoring support</a>
+<br><a href="..\concepts\concepts-11.htm">Scrapbook</a>
+<p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
+<p><a href="..\tasks\tasks-31.htm">Adding source code as individual files</a>
+<br><a href="..\tasks\tasks-11.htm">Creating Java elements</a>
+<br><a href="..\tasks\tasks-66.htm">Formatting Java code</a>
+<br><a href="..\tasks\tasks-64.htm">Restoring a deleted workbench element</a>
+<br><a href="..\tasks\tasks-128.htm">Setting the launcher for a project</a>
+<br><a href="..\tasks\tasks-2.htm">Showing and hiding files</a>
+<br><a href="..\tasks\tasks-119.htm">Working with JREs</a>
+<p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
+<p><a href="..\reference\ref-2.htm">JDT actions</a>
+<br><a href="..\reference\ref-152.htm">Frequently asked questions on JDT</a>
+<br><a href="..\reference\ref-155.htm">JDT glossary</a>
+<br>&nbsp;
+<p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195></div>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
-
-
-
-
-
-</BODY>
-</HTML>
+</body>
+</html>
