--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -1,104 +1,111 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Java editor</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Java editor</H1>
-<P CLASS="Para">
-The JDT provides an editor that gives you specific support for editing Java code. </P>
-<P CLASS="Para">
-The editor is associated with the Java-specific Outline view, which shows the 
-structure of the active Java compilation unit. It is updated as the user edits 
-the compilation unit.</P>
-<P CLASS="Para">
-The Java editor can be opened on binary CLASS files. If a JAR file containing the CLASS files has a source attachment, then the editor shows the corresponding source.</P>
-<P CLASS="Para">
-The editor includes the following features:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Syntax highlighting</LI>
-<LI CLASS="Item">
-Content/code assist</LI>
-<LI CLASS="Item">
-Code formatting</LI>
-<LI CLASS="Item">
-Import assistance</LI>
-<LI CLASS="Item">
-Integrated debugging features</LI>
-<LI CLASS="Item">
-Can be configured to either show an entire compilation unit or a single Java element only</LI>
-</UL>
-<P CLASS="Para">
-By default, this editor is activated by either:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-selecting <b>Open With</b> &gt; <b>Java Editor</b> from a selection's pop-up 
-menu in the Navigator or Package view </LI>
-<LI CLASS="Item">
-double-clicking a Java file in the Navigator or Package view</LI>
-<LI CLASS="Item">
-single-clicking a currently-open Java file in the Navigator or Package view. This method is available only when the
-<b> <SPAN CLASS="Label">
-Link Navigator selection to active editor</SPAN></b>
- option is turned on (<b>Workbench</b> &gt; <b>Preferences</b> &gt; <b>Workbench</b>)</LI>
-<LI CLASS="Item">
-selecting <b> <SPAN CLASS="Label">
-Open</SPAN></b>
- from the pop-up menu of either a type or a method in the Hierarchy view.</LI>
-</UL>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Java editor</h1>
+
+<p class=para>The JDT provides an editor that gives you specific support for
+editing Java code. </p>
+
+<p class=para>The editor is associated with the Java-specific Outline view,
+which shows the structure of the active Java compilation unit. It is updated as
+the user edits the compilation unit.</p>
+
+<p class=para>The Java editor can be opened on binary CLASS files. If a JAR
+file containing the CLASS files has a source attachment, then the editor shows
+the corresponding source.</p>
+
+<p class=para>The editor includes the following features:</p>
+
+<ul style='margin-top:0in' type=disc>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Syntax highlighting<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Content/code assist<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Code formatting<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Import assistance<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Integrated debugging features<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Can be configured to either
+     show an entire compilation unit or a single Java element only (to change the
+     setting, use the toolbar button <b>Show Source of Selected Element Only</b>)<o:p></o:p></span></li>
+</ul>
+
+<p class=para>By default, this editor is activated by either:</p>
+
+<ul style='margin-top:0in' type=disc>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>selecting <b>Open With</b> &gt;
+     <b>Java Editor</b> from a selection's pop-up menu in the Navigator,
+     Package Explorer or Types view <o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>clicking a Java file in the
+     Navigator or Package Explorer view (see<b> </b>the <b><span
+     style="mso-spacerun: yes">&nbsp;</span>Window &gt; Preferences &gt;
+     Workbench </b>preference page to choose between single and double click
+     modes)<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>clicking a Java type, method or
+     field in the Package Explorer, Types, Members or Hierarchy view (see<b> </b>the
+     <b><span style="mso-spacerun: yes">&nbsp;</span>Window &gt; Preferences
+     &gt; Workbench </b>preference page to choose between single and double
+     click modes)<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>single-clicking a
+     currently-open Java file in the Navigator or Package Explorer view. <o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>single-clicking a Java type,
+     method or field (if its compilation unit is currently open) in <span
+     style="mso-spacerun: yes">&nbsp;</span>the Package Explorer, Types,
+     Members or Hierarchy view<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>selecting <span class=label><b>Open</b></span>
+     from the pop-up menu of either a type or a method in the Hierarchy, Members,
+     Types or Package Explorer view.<o:p></o:p></span></li>
+</ul>
+
 <p>&nbsp;</p>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p>
-<a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p dir="ltr">
-<a href="../tasks/tasks-59.htm">Adding required 
-import statements</a><br>
-<a href="../tasks/tasks-138.htm">Evaluating 
-expressions</a><br>
-<a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-<a href="../tasks/tasks-57.htm">Generating accessors</a><br>
-<a href="../tasks/tasks-130.htm">Launching a Java 
-program</a><br>
-<a href="../tasks/tasks-73.htm">Opening an editor 
-for a selected element</a><br>
-<a href="../tasks/tasks-65.htm">Using content/code assist</a><br>
-<a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
-<a href="../tasks/tasks-107.htm">Viewing compilation 
-errors and warnings</a><br>
-<a href="../tasks/tasks-156.htm">Viewing runtime 
-exceptions</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
 
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
+<p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
+<a href="..\tasks\tasks-138.htm">Evaluating expressions</a><br>
+<a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
+<a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
+<a href="..\tasks\tasks-130.htm">Launching a Java program</a><br>
+<a href="..\tasks\tasks-73.htm">Opening an editor for a selected element</a><br>
+<a href="..\tasks\tasks-65.htm">Using content/code assist</a><br>
+<a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
+<a href="..\tasks\tasks-107.htm">Viewing compilation errors and warnings</a><br>
+<a href="..\tasks\tasks-156.htm">Viewing runtime exceptions</a></p>
 
-<p>
-<a href="../reference/ref-5.htm">Java editor actions</a><br>
-<a href="../reference/ref-102.htm">Outline view for Java</a><br>
-<a href="../reference/ref-26.htm">Syntax highlighting</a><br>
-<a href="../reference/ref-24.htm">Views and editors</a></p>
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
+<p><a href="..\reference\ref-5.htm">Java editor actions</a><br>
+<a href="..\reference\ref-102.htm">Outline view for Java</a><br>
+<a href="..\reference\ref-26.htm">Syntax highlighting</a><br>
+<a href="..\reference\ref-24.htm">Views and editors</a></p>
 
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-<P>&nbsp;<br>
-
-<img src = ../images/ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
-</BODY>
-</HTML>
+</html>
