--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -1,94 +1,107 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Java search</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Java search</H1>
-The Java searching support allows you to find precise declarations and references of Java elements (packages, types, methods, fields). Searching is supported by an index that is kept up to date in the background as the resources corresponding to Java elements are changed. The Java search does not need the workspace to have ever been built. It is still possible to conduct searches when auto-build is turned off.<P CLASS="Para">
-The following searches can be conducted from the pop-up menus of Java elements:</P>
-<TABLE BORDER="1" cellspacing="0">
-<THEAD>
-<TR>
-<TH ROWSPAN="1" COLSPAN="1">
-<P CLASS="Para">
-Command</P>
-</TH>
-<TH ROWSPAN="1" COLSPAN="1">
-<P CLASS="Para">
-Description</P>
-</TH>
-</TR>
-</THEAD>
-<TBODY>
-<TR>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-References</P>
-</TD>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Finds all references to the selected Java element in the workbench</P>
-</TD>
-</TR>
-<TR>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Declarations in Workspace</P>
-</TD>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Finds all declarations of the selected Java element in the workbench</P>
-</TD>
-</TR>
-<TR>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Declarations in Hierarchy</P>
-</TD>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Finds all declarations of the selected Java element in its entire hierarchy including interfaces, superclasses and subclasses. If the Java element is neither a type nor an interface, then the hierarchy of the enclosing type or interface is used.</P>
-</TD>
-</TR>
-<TR>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Implementers</P>
-</TD>
-<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-<P CLASS="Para">
-Finds all implementers of an interface in the workbench.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;</P>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
+<div class=Section1>
 
+<h1>Java search</h1>
 
+<p class=MsoNormal><span style='font-size:10.0pt'>The Java searching support
+allows you to find precise declarations and references of Java elements
+(packages, types, methods, fields). Searching is supported by an index that is
+kept up to date in the background as the resources corresponding to Java elements
+are changed. The Java search does not need the workspace to have ever been
+built. It is still possible to conduct searches when auto-build is turned off.<o:p></o:p></span></p>
 
+<p class=para>The following searches can be conducted from the pop-up menus of
+Java elements:</p>
 
-<p>
-<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p>
-<a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-79.htm">Searching Java code</a></p>
-<P>&nbsp;<br>
+<table border=1 cellspacing=0 cellpadding=0 style='mso-cellspacing:0in'>
+ <thead>
+  <tr>
+   <td style='padding:.75pt .75pt .75pt .75pt'>
+   <p class=para align=center style='text-align:center'><b>Command<o:p></o:p></b></p>
+   </td>
+   <td style='padding:.75pt .75pt .75pt .75pt'>
+   <p class=para align=center style='text-align:center'><b>Description<o:p></o:p></b></p>
+   </td>
+  </tr>
+ </thead>
+ <tr>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>References</p>
+  </td>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Finds all references to the selected Java element</p>
+  </td>
+ </tr>
+ <tr>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Declarations </p>
+  </td>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Finds all declarations of the selected Java element</p>
+  </td>
+ </tr>
+ <tr>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Implementors</p>
+  </td>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Finds all implementors of the selected Java interface</p>
+  </td>
+ </tr>
+ <tr>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Read access</p>
+  </td>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Finds all read accesses to the selected Java field</p>
+  </td>
+ </tr>
+ <tr>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Write access </p>
+  </td>
+  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
+  <p class=para>Finds all write accesses to the selected Java field</p>
+  </td>
+ </tr>
+</table>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p>&nbsp;</p>
 
-</P>
+<p>Searches can be performed on various scopes:</p>
 
+<p><b>Workspace</b> &#8211; all projects and files in them are included in this
+search</p>
 
+<p><b>Hierarchy</b> &#8211; only the type hierarchy of the selected element (or its
+declaring type&#8217;s) is included in this search</p>
 
+<p><b>Working Set</b> &#8211; only resources that belong to the chosen working set
+are is included in this search</p>
 
+<p><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
 
-</BODY>
-</HTML>
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-79.htm">Searching Java code</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
