--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -1,63 +1,72 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Refactoring support</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Refactoring support</H1>
-<P CLASS="Para">
-The goal of refactoring is to allow for improving your code without changing its behaviors. Refactoring means behavior-preserving program transformations. When you refactor your code, your goal is to make a system-wide coding change without affecting the semantic behavior of the system. The JDT automatically manages refactorings for you.</P>
-<P CLASS="Para">
-The JDT supports a number of transformations described in Martin Fowler's book
-<i> <SPAN CLASS="Title">
-Refactoring: Improving the Design of Existing Code</SPAN></i>, Addison Wesley 1999.</P>
-<P CLASS="Para">
-When performing a refactoring operation, you can optionally preview all the impending changes resulting from a refactoring 
-action before you finally choose to carry it out. Thus, you can execute a refactoring 
-in one of two different ways: </P>
-<ul>
-  <li><span style="font-weight: 400">Refactoring without preview<br>
-  </span>In a quick refactoring, you skip being notified of potential problems and the refactoring preview. If a Stop problem is predicted, the refactoring will not be carried out.</li>
-  <li><span style="font-weight: 400">Refactoring with preview<br>
-  </span>In a controlled refactoring, you are notified of potential problems and are given a detailed preview of what the refactoring action will do.</li>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Refactoring support</h1>
+
+<p class=para>The goal of refactoring is to improve source code without
+changing its behavior. Refactoring means behavior-preserving program
+transformation. When you refactor your code, your goal is to make a system-wide
+code change without affecting the behavior of the system. The JDT helps you automatically
+manage refactorings.</p>
+
+<p class=para>The JDT supports a number of transformations described in Martin
+Fowler's book <span class=title1><i>Refactoring: Improving the Design of
+Existing Code</i></span>, Addison Wesley 1999.</p>
+
+<p class=para>When performing a refactoring operation, you can optionally
+preview all the impending changes resulting from a refactoring action before
+you finally choose to carry them out. Thus, you can execute a refactoring in
+one of two different ways: </p>
+
+<ul style='margin-top:0in' type=disc>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Refactoring without preview<br>
+     In a quick refactoring, you skip being notified of potential problems and
+     the refactoring preview. If a Stop problem is detected, the refactoring
+     will not be carried out.<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Refactoring with preview<br>
+     In a controlled refactoring, you are notified of potential problems and
+     are given a detailed preview of what the refactoring action will do.<o:p></o:p></span></li>
 </ul>
-<p>
-Refactoring commands are available from the context menus in may views and editors.</p>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-82.htm">Refactoring without 
-preview</a><br>
-<a href="../tasks/tasks-83.htm">Refactoring with 
-preview</a><br>
-<a href="../tasks/tasks-84.htm">Previewing 
-refactoring changes</a><br>
-<a href="../tasks/tasks-100.htm">Undoing a 
-refactoring operation</a><br>
-<a href="../tasks/tasks-101.htm">Redoing a 
-refactoring operation</a><br>
+
+<p>Refactoring commands are available from the context menus in may views and
+editors.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"><br>
+<a href="..\tasks\tasks-82.htm">Refactoring without preview</a><br>
+<a href="..\tasks\tasks-83.htm">Refactoring with preview</a><br>
+<a href="..\tasks\tasks-84.htm">Previewing refactoring changes</a><br>
+<a href="..\tasks\tasks-100.htm">Undoing a refactoring operation</a><br>
+<a href="..\tasks\tasks-101.htm">Redoing a refactoring operation</a><br>
 &nbsp;</p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-116.htm">Refactoring 
-actions</a><br>
-<a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-<a href="../reference/ref-23.htm">Refactoring preferences</a></p>
-<P CLASS="Para">
-&nbsp;</P>
-<P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-</P>
+<p><a href="..\reference\ref-116.htm">Refactoring actions</a><br>
+<a href="..\reference\ref-117.htm">Refactoring wizard</a><br>
+<a href="..\reference\ref-23.htm">Refactoring preferences</a></p>
 
+<p class=para>&nbsp;</p>
 
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-</BODY>
-</HTML>
+</html>
