--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -1,54 +1,57 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Java projects</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head" dir="ltr">
-Java projects</H1>
-<P CLASS="Para">
-A Java project has an associated Java builder that can incrementally compile Java source files as they are changed. Each Java project maintains additional information about the type hierarchy and the references and declarations of Java elements. This information is constantly updated as the user changes the Java source code, it is not dependent on the builder.</P>
-<P CLASS="Para">
-You can organize Java projects in two different ways:</P>
-<ul>
-  <li>Using the project as the source container. This is the recommended 
-  organization for simple projects. </li>
-  <li>Using source folders as the source container.
-This is the recommended organization for more complex projects. It allows you to subdivide packages into groups.</li>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Java projects</h1>
+
+<p class=para>A Java project has an associated Java builder that can
+incrementally compile Java source files as they are changed. Each Java project
+maintains additional information about the type hierarchy and the references
+and declarations of Java elements. This information is constantly updated as
+the user changes the Java source code. It is not dependent on the builder.</p>
+
+<p class=para>You can organize Java projects in two different ways:</p>
+
+<ul style='margin-top:0in' type=disc>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Using the project as the source
+     container. This is the recommended organization for simple projects. <o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Using source folders as the
+     source container. This is the recommended organization for more complex
+     projects. It allows you to subdivide packages into groups.<o:p></o:p></span></li>
 </ul>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
 <p><a href="concepts-4.htm">Java builder</a><br>
-<a href="../concepts/concepts-9.htm">Refactoring support</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p dir="ltr"><a href="../tasks/tasks-85.htm">Copying and moving 
-Java elements</a><br>
-<a href="../tasks/tasks-11.htm">Creating Java 
-elements</a><br>
-<a href="../tasks/tasks-13.htm">Creating a Java project as its own source 
+<a href="..\concepts\concepts-9.htm">Refactoring support</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-85.htm">Copying and moving Java elements</a><br>
+<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+<a href="..\tasks\tasks-13.htm">Creating a Java project as its own source
 container</a><br>
-<a href="../tasks/tasks-14.htm">Creating a Java 
-project with source folders</a><br>
-<a href="../tasks/tasks-26.htm">Creating a new 
-source folder</a><br>
-<a href="../tasks/tasks-47.htm">Filtering elements</a><br>
-<a href="../tasks/tasks-57.htm">Generating accessors</a><br>
-<a href="../tasks/tasks-12.htm">Organizing Java 
-projects</a><br>
-<a href="../tasks/tasks-128.htm">Setting the 
-launcher for a project</a></p>
-<P>&nbsp;<br>
+<a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
+<a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
+<a href="..\tasks\tasks-47.htm">Filtering elements</a><br>
+<a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
+<a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
+<a href="..\tasks\tasks-128.htm">Setting the launcher for a project</a></p>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 
-</P>
+</div>
 
+</body>
 
-
-
-
-</BODY>
-</HTML>
+</html>
