--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -10,7 +10,7 @@
 <BODY BGCOLOR="#ffffff">
 <h2>
 Editors and views</h2>
-<P CLASS="Intro">Before we dive into using the workbench let's start by familiarizing
+<P CLASS="Intro">Before we dive into using the workbench, let's start by familiarizing
 ourselves with the elements of the workbench. A workbench consists of:
 <ul>
   <li>
