--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -28,14 +28,12 @@ A view might appear by itself or stacked with other views in a tabbed notebook.&
   </blockquote>
 </blockquote>
 <P CLASS="Para">
-To activate a view that is part of a tabbed notebook simply click on its tab.
-For example, to activate the Repositories view, click on the Repositories tab at
-the bottom of the notebook.&nbsp; As we will soon discover, the workbench
+To activate a view that is part of a tabbed notebook simply click on its tab. As we will soon discover, the workbench
 provides a number of quick and easy ways to configure your environment,
-including whether the tabs are at the bottom or top of our notebooks.&nbsp;</P>
+including whether the tabs are at the bottom or top of your notebooks.&nbsp;</P>
 <P CLASS="Para" align="center">
 <img align="texttop" border="0" src="../images/Image3_tabbed.jpg" width="242" height="202"></P>
-<P CLASS="Para">Views have two menus, a popup menu associated with the top
+<P CLASS="Para">Views have two menus, the first is a menu associated with the top
 left area of the view which allows you to manipulate the view in much the
 same manner as the menu associated with the workbench window.</P>
 <P CLASS="Para" align="center"><img align="texttop" border="0" src="../images/image8_view.jpg" width="297" height="256"></P>
@@ -46,11 +44,6 @@ for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
 <P CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image7_view_pulldown.jpg" width="297" height="256"></P>
 <P CLASS="Para">&nbsp;</P>
 <P CLASS="Para">
- <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13">
- Views can be undocked from the workbench window and can exist in &quot;floating&quot; windows
- . Undocked views can also be docked back into the workbench window.
- Later in this tutorial we will see how to rearrange our workbench.&nbsp;</P>
-<P CLASS="Para">
  In the event
  you decided to experiment by rearranging your workbench, this is probably a
  good opportunity to use the Perspective &gt; Reset menu operation. The reset
@@ -58,7 +51,7 @@ operation restores the layout&nbsp; to it's original state.&nbsp;</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image3_float.jpg" width="645" height="495"></P>
 <P CLASS="Para">
-You can display a view by selecting it from the Perspective &gt; Show View
+You can display a view by selecting it from the Window &gt; Show View
 menu. A perspective determines the views you are likely to need and shows these on the
 Show View submenu. Additional views are available by choosing
 Other... at the bottom of the Show View submenu. As we will see later this is
