--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02a.htm
@@ -17,14 +17,15 @@ Navigator, and editors.
 More than one workbench window can be open at any given time.&nbsp;</P>
 <P CLASS="Para">At the far left of the window is a shortcut bar that allows you to open new perspectives and move
 between perspectives that are already open. The name of the active perspective is shown
-in the title of the window and its icons in the shortcut bar is a pushed-in icon.&nbsp;
+in the title of the window and its icon in the shortcut bar is a pushed-in icon.&nbsp;
 </P>
 <P CLASS="Para"> Looking
 at the title bar of the workbench window we can see that we are working with
-the&nbsp; Resource perspective.&nbsp; The Navigator, Repositories , Tasks and
+the&nbsp; Resource perspective.&nbsp; The Navigator, Tasks and
 Outline views are open, along with an editor on the welcome page.&nbsp; You
 might want to take a moment to peruse the welcome page. It provides a quick
-starting point if you are eager to get started on your first project.
+starting point if you are eager to customize your workbench or learn about other
+installed features.
 </P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/image1.jpg" width="643" height="496"></P>
 
